5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1756_672.log
== TEST (2019-05-22 13:46:21) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array(int(input))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 13:46:39) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array(int(input(v:)))

-- ERROR:
File "XXXX", line 3
    n = array(int(input(v:)))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 13:46:48) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array(int(input("v: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 13:48:36) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array(int(input("v: ")))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 13:55:15) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = int(input("numero de posicoes: "))
v = ones(n, dtype=int)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 13:55:26) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = int(input("numero de posicoes: "))
v = ones(n, dtype=int)
print(v)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 13:55:34) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = int(input("numero de posicoes: "))
v = ones(n, dtype=int)
print(v)



-- EXECUTION TIME:
0.508844
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
